Create Model and DBContext + add log4net for logging

--- a/NC_Monitoring/Views/Account/Login.cshtml
+++ b/NC_Monitoring/Views/Account/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using NC_Monitoring.Data.Models
+
 @model LoginViewModel
-@inject SignInManager<IdentityUser> SignInManager
+@inject SignInManager<ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Přihlášení";
