--- a/NC_Monitoring/Views/Shared/_LoginPartial.cshtml
+++ b/NC_Monitoring/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 @using Microsoft.AspNetCore.Identity
-@using NC_Monitoring.Data.Models;
+@using NC_Monitoring.Business.Managers
 
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject ApplicationSignInManager SignInManager
+@inject ApplicationUserManager UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
