--- a/NC_Monitoring/Views/_ViewImports.cshtml
+++ b/NC_Monitoring/Views/_ViewImports.cshtml
@@ -4,3 +4,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using DevExtreme.AspNet.Mvc
+
+@using NC_Monitoring.ViewModels
+@using NC_Monitoring.Controllers.Api
