--- a/NC_Monitoring/Views/Shared/_Layout.cshtml
+++ b/NC_Monitoring/Views/Shared/_Layout.cshtml
@@ -80,6 +80,7 @@
                 <ul class="nav navbar-nav">
                     @*<li><a is-active-route href="#">Home</a></li>*@
                     <li><a asp-controller="Channels" asp-action="Index">Channels</a></li>
+                    <li><a asp-controller="Scenarios" asp-action="Index">Scenarios</a></li>
                     @*<li><a is-active-route asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                 </ul>
                 <partial name="_LoginPartial" />
