--- a/NC_Monitoring/Views/Shared/_Layout.cshtml
+++ b/NC_Monitoring/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     @*<li><a is-active-route href="#">Home</a></li>*@
+                    <li><a asp-controller="Monitors" asp-action="Index">Monitors</a></li>
                     <li><a asp-controller="Channels" asp-action="Index">Channels</a></li>
                     <li><a asp-controller="Scenarios" asp-action="Index">Scenarios</a></li>
                     @*<li><a is-active-route asp-controller="Home" asp-action="Contact">Contact</a></li>*@
