--- a/NC_Monitoring/Views/Shared/_Layout.cshtml
+++ b/NC_Monitoring/Views/Shared/_Layout.cshtml
@@ -82,6 +82,7 @@
                     <li><a asp-controller="Monitors" asp-action="Index">Monitors</a></li>
                     <li><a asp-controller="Channels" asp-action="Index">Channels</a></li>
                     <li><a asp-controller="Scenarios" asp-action="Index">Scenarios</a></li>
+                    <li><a asp-route="MonitorRecords">Records</a></li>
                     @*<li><a is-active-route asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                 </ul>
                 <partial name="_LoginPartial" />
