--- a/NC_Monitoring/Views/Account/Login.cshtml
+++ b/NC_Monitoring/Views/Account/Login.cshtml
@@ -1,51 +1,45 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using NC_Monitoring.Business.Managers
+﻿@using NC_Monitoring.Business.Managers
 
 @model LoginViewModel
 @inject ApplicationSignInManager SignInManager
 
 @{
-    ViewData["Title"] = "Přihlášení";
+    ViewData["Title"] = "Login";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-            <h4>Přihlaste se pomocí svého účtu.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label asp-for="RememberMe">
-                        <input asp-for="RememberMe" />
-                        @Html.DisplayNameFor(m => m.RememberMe)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default">Přihlásit se</button>
-            </div>
-            <div class="form-group">
-                <p>
-                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Registrace</a>
-                </p>
-            </div>
-        </form>
-    </div>
-</div>
+<h1>@ViewData["Title"]</h1>
+
+<div asp-validation-summary="All" class="text-danger"></div>
 
 
+@using (Html.BeginForm("Login", "Account", FormMethod.Post))//new { id = "editEmployee" }
+{
+    using (Html.DevExtreme().ValidationGroup())
+    {
+        @(Html.DevExtreme().Form<LoginViewModel>()
+                            //.ShowValidationSummary(true)
+                            .FormData(Model)
+                            .Items(formItems =>
+                            {
+                                formItems.AddSimpleFor(x=>x.Email)
+                                    .IsRequired(true);
+
+                                formItems.AddSimpleFor(x=>x.Password)
+                                    .Editor(e => e.TextBox().Mode(TextBoxMode.Password))
+                                    .IsRequired(true);
+
+                                formItems.AddSimpleFor(x => x.RememberMe)
+                                    .Editor(e=>e.CheckBox().Value(false));
+                            })
+        //.ValidationGroup("login")
+        )
+        @(Html.DevExtreme().Button()
+                                .Text("Login")
+                                //.ValidationGroup("login")
+                                .UseSubmitBehavior(true)
+        )
+    }
+}
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
