--- a/NC_Monitoring/Views/Shared/_LoginPartial.cshtml
+++ b/NC_Monitoring/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,3 @@
-@using Microsoft.AspNetCore.Identity
 @using NC_Monitoring.Business.Managers
 
 @inject ApplicationSignInManager SignInManager
@@ -6,8 +5,13 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-controller="Account" asp-action="Logout"  asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
+    <form asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            @if (User.IsAllowAdding())
+            {
+                <li><a asp-controller="Account" asp-action="Create">Create user</a></li>
+            }
+            <li><a asp-controller="Account" asp-action="ChangePassword">Change password</a></li>
             <li>
                 <a asp-page="/Account/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
@@ -20,7 +24,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-controller="Account" asp-action="Login">Login</a></li>
     </ul>
 }
