--- a/NC_Monitoring/Views/Account/Login.cshtml
+++ b/NC_Monitoring/Views/Account/Login.cshtml
@@ -11,35 +11,33 @@
 
 <div asp-validation-summary="All" class="text-danger"></div>
 
-
-@using (Html.BeginForm("Login", "Account", FormMethod.Post))//new { id = "editEmployee" }
-{
-    using (Html.DevExtreme().ValidationGroup())
+<form asp-action="Login" asp-route-returnurl="@Context.Request.Query["ReturnUrl"]" method="post">
+    @using (Html.DevExtreme().ValidationGroup())
     {
         @(Html.DevExtreme().Form<LoginViewModel>()
-                            //.ShowValidationSummary(true)
-                            .FormData(Model)
-                            .Items(formItems =>
-                            {
-                                formItems.AddSimpleFor(x=>x.Email)
-                                    .IsRequired(true);
+            //.ShowValidationSummary(true)
+            .FormData(Model)
+            .Items(formItems =>
+            {
+                formItems.AddSimpleFor(x=>x.Email)
+                    .IsRequired(true);
 
-                                formItems.AddSimpleFor(x=>x.Password)
-                                    .Editor(e => e.TextBox().Mode(TextBoxMode.Password))
-                                    .IsRequired(true);
+                formItems.AddSimpleFor(x=>x.Password)
+                    .Editor(e => e.TextBox().Mode(TextBoxMode.Password))
+                    .IsRequired(true);
 
-                                formItems.AddSimpleFor(x => x.RememberMe)
-                                    .Editor(e=>e.CheckBox().Value(false));
-                            })
+                formItems.AddSimpleFor(x => x.RememberMe)
+                    .Editor(e=>e.CheckBox().Value(false));
+            })
         //.ValidationGroup("login")
         )
         @(Html.DevExtreme().Button()
-                                .Text("Login")
-                                //.ValidationGroup("login")
-                                .UseSubmitBehavior(true)
+            .Text("Login")
+            //.ValidationGroup("login")
+            .UseSubmitBehavior(true)
         )
     }
-}
+</form>
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
