--- a/NC_Monitoring/Views/Scenarios/Details.cshtml
+++ b/NC_Monitoring/Views/Scenarios/Details.cshtml
@@ -63,5 +63,6 @@ else
 <script>
     function onInitNewRow(item) {
         item.data.ScenarioId = @scenarioId;
+        item.data.TestCycleInterval = "00:00";
     }
 </script>
